--- a/Interfatav2/interfata.css
+++ b/Interfatav2/interfata.css
@@ -1,47 +1,54 @@
 html{
     font-size: 62.5%;
-    -webkit-text-size-adjust: 100%;
+    /* -webkit-text-size-adjust: 100%; */
 }
 body{
-    color: #333;
-    font-family: 'Post Grotesk';
+    background-color: #E6E6E6;
+    color: #F1E0C5;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-style: normal;
     font-weight: 400;
     line-height: 1.42857143;
-    font-size: 1.4rem;
-}
+    font-size: 1.5rem;
+    margin: 0;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+  }
                         /*Header*/
 .hamburger{
-    width: 1.5em;
-    height: 0.3em;
-    background-color: black;
-    margin: 0.1em 0;
+    width: 1.2em;
+    height: 0.2em;
+    background-color: #001514;
+    margin: 0.12em 0;
+    display: block;
 }
-.header-menu{
-    padding-top: 1%;
+.headerMenu{
+    padding-top: 1.3%;
     margin-left: 1.5%;
+    width: 6%;
 }
-.page-header{
+/* .page-header{
     position: relative;
     height: 50px;
     width: 100%;
     background: #fff;
     z-index: 900;
     border: none;
-    box-sizing: border-box;
-   
-}
+    box-sizing: border-box;  
+} */
+
 .sidenav {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
+    height: 100%;
+    width: 0; 
     position: fixed; /* Stay in place */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: #000000; /* Black*/
+    background-color: #39393A; 
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.6s; /* 0.5 second transition effect to slide in the sidenav */
+    padding-top: 60px; 
+    transition: 0.6s; 
   }
 
 .sidenav a {
@@ -68,19 +75,81 @@ body{
     font-size: 36px;
     margin-left: 50px;
   }
-
+#userLogin{
+  /* float: right; */
+  color: #001514;
+  margin-top: 0.4rem;
+  padding-right: 1em;
+  font-size: 1em;
+  text-decoration: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  right: 0;
+}
+#userLogin span{
+  display: flex;
+  flex-wrap: wrap;
+}
+#userLogin div{
+  font-size: 2.2rem;
+  line-height: 2.3em;
+  font-weight:bold;
+  text-align: center;
+  padding-right: 0.5em;
+}
+#userLogin img{
+  width: 3.7rem;
+  color: #001514;
+  justify-content: center;
+}
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+  } 
+  /* NU MERGRE */
+@media screen and (max-height: 450px) {
+    #userLogin{margin-top: 0rem;}
+    #userLogin div{
+      display: none;
+      visibility: hidden;}
   }      
-
-#Userimg{
-    max-width: 20%;
-    height: auto;
-}
                         /*Content*/
-
-
-                        
-
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container img{
+  /* max-width: 100%; */
+  width: 60rem;
+  height: auto;
+}
+.container button{
+  width: 10%;
+  margin-top: 2rem;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  border-radius: 0.15em;
+  background-color: #001514;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  transition: 0.5s;
+  font-weight: bold;
+  font-size: 2rem;
+}                   
+.container button:hover{
+  transition: 0.5s;
+  width: 100%;
+}
+.container a{
+  text-decoration: none;
+  color:  #E6E6E6;
+  font-weight:300;
+}
                         /*Footer*/
+footer{
+  
+}
