--- a/Interfatav2/noutati.css
+++ b/Interfatav2/noutati.css
@@ -223,12 +223,13 @@ input{
 
 .basic-grid{
     display: grid;
-    gap: 1rem;
+    gap: 2rem;
     grid-template-columns: repeat(auto-fit,minmax(30rem,1fr));
+    /* grid-template-rows: minmax(30rem, max-content)
+                       repeat(auto-fill, 60rem); */
     margin-bottom: 3rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    /* grid-template-rows: minmax(30rem,auto); */
 
 }
 .container{
@@ -239,28 +240,23 @@ input{
     color: #313131;
     background-color: #E5E5E5;
     position: relative;
+    box-sizing: border-box;
 } 
 .container img{
   width: 100%;
   height: auto;
+  object-fit: cover;
 }
 .container p{
+  display: block;
   justify-content: center;
   text-align: center;
-  position: absolute;
-  left: 0.3em;
-  bottom: 0.5em;
-  right: 0.3em;
+  position: relative;
   width: auto;
-  opacity: 0;
-  transition: 0.5s;
-  background-color:#010103;
-  color: #E5E5E5;
   padding: 5rem 1rem 5rem 1rem;
   font-size: 1.8rem;
-  margin: 0.3rem;
-  font-weight: 500;
-  border-radius: 1.5rem;
+  margin: 0rem;
+  box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000030;
 }
 .container p:hover{
   transition: 0.5s;
@@ -268,8 +264,8 @@ input{
 }
 .container a{
   text-decoration: none;
-  color: #F1E0C5;
   transition: 0.35s;
+  color: #5e5d5d;
 }
 .container a:hover{
   color: #215cb4;
