--- a/css/login.css
+++ b/css/login.css
@@ -1,12 +1,6 @@
-body {
-    width: 100vw;
-    margin: 0 auto;
-    height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.page { 
-    height: 100%;
+.login-page {
+    display:flex; 
+    height: -webkit-fill-available;
     width: 100%;
     background: linear-gradient(130deg, #fff 0, #fff 10%,#3A7CA5 10%,#3A7CA5 50%,#16425B 50%, #16425B 90%, #fff 0%);
     display: flex;
