--- a/css/upload.css
+++ b/css/upload.css
@@ -3,12 +3,17 @@ body {
 }
 
 .formCont > form {
+  
+  border: 5px ridge rgb(71, 70, 70);
+  border-radius: 20px;
   display: flex;
   flex-flow: column wrap;
   /* align: center;
     justify-content: center; */
   grid-column-start: 2;
-  background-color: #dadada;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  background-color: #d4d4d3;
   /* margin-left: 25%;
     margin-right: 25%; */
   /* background-color: red; */
@@ -16,32 +21,45 @@ body {
 
 .formCont > img {
   grid-column-start: 3;
-  width: 100%;
-  height: 100%;
+  grid-row-start: 2;
+  height: 400px;
+  width: auto;
+  max-width: 100%;
 }
 
 .formCont {
-  grid-gap: 50px;
+  grid-gap: 10%;
   margin-top: 5%;
   display: grid;
-  grid-template-columns: [margin-left] 1fr [form] 2fr [photo] 3fr [margin-right] 1fr;
+  grid-template-columns: [margin-left] 0.5fr [form] 1fr [spc] 1fr [photo] 1fr;
   /* grid-template-rows: 1; */
+  grid-template-rows: [margin-top] 0.2fr [picture] 2fr;
   align-content: center;
   justify-content: center;
 }
 
 .inpText {
+  padding: 5px;
+  box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
   font-family: "Arial", Times, serif;
+  margin: 20px;
+  border: 2px solid gray;
   font-size: 18px;
   background-color: transparent;
-  border-color: transparent;
-  border-bottom: 2px solid black;
-  padding-top: 30px;
+  border-radius: 15px;
   font-weight: bold;
 }
 
 .inpSub {
-  padding-top: 40px;
+  border-radius: 10px;
+  margin: 10px;
+  border: 0 hidden black;
+  width: 50%;
+  align-self: center;
+}
+
+.uplBut {
+  align-self: center;
 }
 
 /* .uplBut {
