--- a/css/upload.css
+++ b/css/upload.css
@@ -2,7 +2,7 @@ body {
   background-color: #e6e6e6;
 }
 
-.formCont > form {
+.formCont > .form {
   transition: 1s;
   overflow: auto;
   box-shadow: 0.001rem 0.001rem 0.008rem 0.033rem grey;
