--- a/css/export.css
+++ b/css/export.css
@@ -2,7 +2,9 @@ body {
   width: 100vw;
   margin: 0 auto;
   height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: normal;
 }
 .page {
   height: 100%;
@@ -11,6 +13,127 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+
+header {
+  position: sticky;
+  top: 0em;
+  z-index: 2;
+}
+.hamburger {
+  width: 1.2em;
+  height: 0.2em;
+  background-color: #637074;
+  margin: 0.12em 0;
+  display: block;
+}
+.headerMenu {
+  padding-top: 1.3%;
+  margin-left: 1.5%;
+  width: 4%;
+}
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #333333;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px;
+  transition: 0.6s;
+}
+
+.sidenav a {
+  padding: 1rem 1rem 1rem 3rem;
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  font-weight: 700;
+  text-align: center;
+  padding-left: 0.1em;
+}
+
+.sidenav a:hover {
+  color: #3a7ca5;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+#miniLogo {
+  width: 3%;
+  height: auto;
+  position: absolute;
+  z-index: -1;
+  top: 1rem;
+  left: 6rem;
+}
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1030px) {
+  header {
+    padding-top: 0.5rem;
+  }
+  #miniLogo {
+    width: 4%;
+    top: 1.2rem;
+  }
+}
+@media (max-width: 770px) {
+  header {
+    padding-top: 0.8rem;
+  }
+  #miniLogo {
+    left: 5rem;
+    width: 6%;
+  }
+}
+@media (max-width: 450px) {
+  header {
+    padding-top: 1.6rem;
+  }
+  #miniLogo {
+    display: none;
+  }
+  #userLogin div {
+    visibility: hidden;
+  }
+  #userLogin img {
+    padding-top: 1.3rem;
+  }
+}
+.PageHeader {
+  display: block;
+  background-color: #e6e6e6;
+  position: sticky;
+  top: 0em;
+  z-index: 1;
+}
+.PageHeader p {
+  color: #637074;
+  padding-left: 17rem;
+  padding-bottom: 1rem;
+  font-weight: bold;
+  font-size: 5rem;
+  border-bottom: 0.08rem solid #16425b;
+  margin-bottom: 2rem;
+  transition: 0.2s;
+}
+
 .container {
   text-align: center;
   background-color: #e6e6e6;
@@ -89,7 +212,6 @@ body {
   font-size-adjust: 0.5rem;
   outline: none;
   margin: 0.3rem;
-  margin-top: 1.5rem;
   overflow: auto;
 }
 .export_buttons button:hover {
