--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,20 @@
     flex-direction: column;
     justify-content: center;
 }
+.notification {
+    position: absolute;
+    top: 20px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right:auto;
+    max-width: 150px;
+    height: auto;
+    background-color: white;
+    color: black;
+    border: 2px groove #16425B;
+    text-align: center;
+}
 
 .container {
     background-color: #fff;
