--- a/css/noutati.css
+++ b/css/noutati.css
@@ -291,7 +291,7 @@ input {
   justify-content: center;
   text-align: center;
   position: relative;
-  width: auto;
+  width: 97%;
   padding: 5rem 1rem 5rem 1rem;
   font-size: 1.8rem;
   margin: 0rem;
