--- a/css/upload.css
+++ b/css/upload.css
@@ -134,7 +134,7 @@ header {
   transition: 0.2s;
 }
 
-.formCont > .form {
+.formCont > form {
   transition: 1s;
   overflow: auto;
   box-shadow: 0.001rem 0.001rem 0.008rem 0.033rem grey;
