--- a/css/adminPanel.css
+++ b/css/adminPanel.css
@@ -217,7 +217,7 @@ header {
 }
 
 .user-information-container {
-  width: 25rem;
+  width: 100%;
   height: 10rem;
   background-color: #e7e7e7;
   border: 1px #637074 solid;
@@ -230,8 +230,8 @@ header {
   box-shadow: 0 4px 8px 0 #00000033, 0 6px 20px 0 #00000030;
 }
 
-.user-information-container:target {
-  border: 1px gold solid;
+.selected-user {
+  border: 2px #637074 solid;
 }
 
 .delete-user-icon {
@@ -312,7 +312,7 @@ header {
 }
 
 .article {
-  width: 45rem;
+  width: 100%;
   height: 22rem;
   display: flex;
   flex-direction: row;
