--- a/css/adminPanel.css
+++ b/css/adminPanel.css
@@ -264,29 +264,6 @@ header {
   margin-bottom: 0.7rem
 }
 
-#users-pagination-controller {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  margin-top: 2rem;
-}
-
-#users-pagination-controller  p {
-  margin: 0rem;
-}
-
-.previews-button , .next-button {
-  margin: 1rem;
-  color: #637074;
-  transition: .25s;
-  cursor: pointer;
-  user-select: none;
-}
-
-.previews-button:hover , .next-button:hover {
- line-height: 120%; 
- border-bottom: 0.25rem #637074 solid;
-}
 
 #chosen-user {
   width: 100%;
@@ -301,6 +278,7 @@ header {
 #articles-container {
   width: 100%;
   height: 100%;
+  margin-bottom: 2rem;
 }
 
 #article-list {
@@ -334,6 +312,7 @@ header {
   width: 30%;
   height: 100%;
   margin-right: 1rem;
+  object-fit: cover;
 }
 
 .article-title {
@@ -369,4 +348,56 @@ header {
 .update-article-button:hover , .delete-article-button:hover {
   color:#e6e6e6;
   background-color: #637074;
+}
+
+#delete-dialog {
+  position: fixed;
+  width: 40rem;
+  height: 20rem;
+  background-color: rgba(255, 255, 255, 0.918);
+  border-radius: 1rem;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#dialog-question {
+  align-self: center;
+  color: #637074;
+  font-weight: 400;
+  font-size: 1.6rem;
+
+}
+
+#dialog-controllers {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-around;
+}
+
+#yes-button, #no-button {
+  border: 1px #637074 solid;
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  align-items: center;
+}
+
+#yes-button:hover, #no-button:hover {
+  background-color: #637074;
+}
+
+#yes-button:hover p, #no-button:hover p {
+  color: rgba(255, 255, 255, 0.918);
+}
+
+#yes-button p, #no-button p {
+  margin: .25rem .5rem;
+  color: #637074;
 }
