--- a/css/chart.css
+++ b/css/chart.css
@@ -139,12 +139,11 @@ header {
   color: #566266;
   text-align: center;
   font-size: 1.7rem;
-  padding: 1rem;
+  padding-left: 50px;
   cursor: pointer;
   outline: none;
   transition: 1s;
   text-decoration: none;
-  padding-left: 293px;
 }
 .rssButton:hover {
   color: #3a7ca5;
@@ -153,28 +152,27 @@ header {
 @media (max-width: 1300px) {
   .rssButton {
     font-size: 1.2rem;
-    padding: 0;
-    padding-bottom: 15px;
-    padding-left: 290px;
+    padding-top: 20px;
   }
 }
 @media (max-width: 770px) {
   .rssButton {
     font-size: 1rem;
-    padding: 0;
-    padding-left: 290px;
   }
 }
 @media (max-width: 430px) {
   .rssButton {
     font-size: 2rem;
-    padding: 0;
-    padding-left: 90px;
   }
 }
 
 .chart-container {
-  position: relative;
-  height: 40vh;
-  width: 80vw;
+  width: 1000px !important;
+  height: 400px !important;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 1rem;
+  margin-bottom: 10rem;
+  align-items: center;
 }
