--- a/css/noutati.css
+++ b/css/noutati.css
@@ -297,9 +297,8 @@ input {
 }
 .container img {
   width: 100%;
-  height: auto;
+  height: 20rem;
   object-fit: cover;
-  flex: 25%;
   overflow: hidden;
   transition: 0.5s;
 }
@@ -378,4 +377,8 @@ input {
 .addbtn:hover {
   opacity: 1;
   transition: ease-in-out 300ms;
+}
+.bottom-article-container {
+  width: 100%;
+  height: 100%;
 }
