--- a/css/noutati.css
+++ b/css/noutati.css
@@ -311,7 +311,7 @@ input {
   justify-content: center;
   text-align: center;
   position: relative;
-  width: 97%;
+
   padding: 5rem 1rem 5rem 1rem;
   font-size: 1.8rem;
   margin: 0rem;
@@ -381,4 +381,63 @@ input {
 .bottom-article-container {
   width: 100%;
   height: 100%;
+}
+
+#pop-up-modal {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  max-width: 50rem;
+  height: 40rem;
+  background-color: rgba(255, 255, 255, 0.911);
+  z-index: 2;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+
+}
+
+#pop-up-modal p {
+  align-self: center;
+  color: #16425b;
+} 
+
+#pop-up-title {
+  font-size: 1.8rem;
+  font-weight: 500;
+  /* color: #16425b; */
+}
+
+#pop-up-description {
+  margin: 0rem 1rem;
+  flex: 1;
+  overflow: hidden;
+}
+
+#pop-up-close-container {
+  width: 7rem;
+  height: 3rem;
+  border: 1px #16425b solid;
+  align-self: center;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-around;
+}
+#pop-up-close-container:hover {
+  background-color: #16425b;
+}
+#pop-up-close-container:hover .pop-up-close-icon, #pop-up-close-container:hover p  {
+  color: rgba(255, 255, 255, 0.911);
+}
+#pop-up-close-container p {
+  color: #16425b;
+  font-weight: 500;
+}
+
+.pop-up-close-icon {
+  align-self: center;
+  color: #16425b;
 }
