--- a/css/noutati.css
+++ b/css/noutati.css
@@ -382,6 +382,10 @@ input {
   width: 100%;
   height: 100%;
 }
+.bottom-article-container p span{
+  margin: 0rem 1rem;
+  cursor: pointer;
+}
 
 #pop-up-modal {
   position: fixed;
