--- a/css/adminPanel.css
+++ b/css/adminPanel.css
@@ -98,7 +98,7 @@ header {
   display: flex;
   flex-wrap: wrap;
 }
-#userLogin div {
+#userLogin p {
   font-size: 2.2rem;
   line-height: 2.3em;
   font-weight: bold;
@@ -106,7 +106,7 @@ header {
   padding-right: 0.5em;
   transition: 0.3s;
 }
-#userLogin div:hover {
+#userLogin p:hover {
   color: #16425b;
   transition: 0.3s;
   font-size: 2.5rem;
